--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "shanebesong",
   "version": "0.0.0",
+  "engines": {
+    "node": "10.0.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
