--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "serve": "ng serve",
     "postinstall": "ng build --prod"
   },
   "private": true,
